[package]
name = "loop_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
itertools = "0.12.1"
num-traits = "0.2.18"
ran = "2.0.1"
rand = "0.8.5"
rs-graph = "0.21.0"


[dependencies.ffmpeg-next]
version = "6.1.1"
default-features = false
features = ["codec", "format", "software-scaling"]